@@ -1,5 +1,6 @@
 DIST fedora-idm-console-1.1.3.tar.bz2 125369 RMD160 b40d3a83ab904f9bc3b71616b5fa7730dc31817e SHA1 bc9fd58b7f9266eab3cca025a9030e2c76a67829 SHA256 04209cf57f8463d6b3e706f57722a9b190294cb3073f536f21d596c6b5421ff8
 DIST fedora.png 11606 RMD160 766c23052bd3f6d323e80f4b702e47e31d8b7671 SHA1 61bb2229f459323809bfa4768a0b9928c06bcb63 SHA256 88318e1704924c7d33aac3e37c195f99d29eb6f6f6235f254f254881257bbb0e
+EBUILD 389-idm-console-1.1.3-r1.ebuild 1645 RMD160 f60a5e9669de7b12021d63e7fa81e0aa384a88fe SHA1 f817aa0738ec0cd68619fe95367f18e16f728502 SHA256 7c48d64ac5de16ad95a86e249f58db49cf691073e969908b1e09d2ad3893e0c3
 EBUILD 389-idm-console-1.1.3.ebuild 1559 RMD160 2cf5b5ea7d9099e755021da5e91937ded3889d2e SHA1 48a87fbfca2fbd5ab5c1367aac4d873e6fd5e548 SHA256 f50e4c661eeb48b6b7c46b4b5a0babce498ee585dee8e75be520028a52d86eae
-MISC ChangeLog 2406 RMD160 74cc46c5a65dd84489b8e925042b8ff8a7b7442c SHA1 3a917f2a1c0040b2944701d58c28402ad5a16d33 SHA256 8b8904fcf6b0ba07daac9fdcdeabe77b21ef7ddfd5a7aeec0ed56c1f429350f5
+MISC ChangeLog 2531 RMD160 914189e951cfdf7cfb4ce7564b91769dc60a1fec SHA1 b966145f6008a8f73dfd3ac814f6d650d4efcd22 SHA256 92936a55dc8b503b7a06f996f57171f74bdc6b81caeea8ce89920fb207c9f2be
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
