@@ -1,4 +1,5 @@
 DIST idm-console-framework-1.1.3.tar.bz2 719653 RMD160 cf071bd9a99020f44c8ebad62eacfeedf84fe7e8 SHA1 b234a0549e80b739672323e963ae149a5be188df SHA256 e47d62afe2f01f6eb75767d433cfd0d10a49f267105b379a8e86aed3e096eb36
+EBUILD idm-console-framework-1.1.3-r1.ebuild 1642 RMD160 d7967342f118b86e9da877f7147d57b95162e3f4 SHA1 4daa56082d10462615e46ab9f81953a64f0e0294 SHA256 fc89652499cf231668e188501b1e67638bbffa79113cd047afc3f6c92c099162
 EBUILD idm-console-framework-1.1.3.ebuild 1835 RMD160 721e51bf648dc1579cc85654c7c4a307dd9f50d6 SHA1 dc1036ed74049692121e5e1b1e6ad9689783797c SHA256 95a6fd9be1a9792385e0184dc32139726324d05417e3e9c88afae96c92445d10
-MISC ChangeLog 405 RMD160 4a10ee75440ae1fd8b065c5234337025653a5e77 SHA1 d2179e9641137a76e0ed9ef4fcb07a5a185e8dc9 SHA256 1a30800623bf77973d11f8bde72b914f202a5c29e517a14ec911ebf70b8c38f3
+MISC ChangeLog 518 RMD160 753f43c8b89d90ca94719214d00e57756c8e35af SHA1 9bfed3c97f27d5f5991b361439c3f13684ae8512 SHA256 92142a39a761918fb432da5e04eb83ce1319f9b779467d615305f3c0ee4c6068
 MISC metadata.xml 416 RMD160 5a60964fb0f508ad54e9a68a95d8effb9106744f SHA1 a5804f180ca14eeaaff312822be1770bc79892d4 SHA256 e403b237fa37574521bfcd478f52062de94ae3cb7c0f27bcb24d55b4b27b8c1b
