@@ -1,5 +1,5 @@
 AUX ldapsdk-gentoo-4.1.8.patch 3716 RMD160 1cff5dde03cbf9cf4bc5d7b07ead60c98c348f62 SHA1 1dc6d7edf621ae53d201585d4e03bec5dd9cd3be SHA256 aa277f4e341f7e9736521078e716fde37de3dacf164b8b399203927fe0ec077a
 DIST ldapsdk-4.1.8.tar.bz2 946652 RMD160 311f19fc13f18b56dcab2bf2ec60cc259a66e36e SHA1 5a810dec487c92cea24d4fc503f2c9ce35ddeeb0 SHA256 291d612af06132b12218e2643b9bb8f9d4ff722d7b9fa0c605eb1c35a47c0e5f
-EBUILD ldapsdk-4.1.8.ebuild 1403 RMD160 d822be784ee14f25dc0ea0a410389bc5c6c3aa9e SHA1 d78cd158d4f4727417fcdc634ae79178ce53aee0 SHA256 6c06c68683757fba11fc378bd70845cf5535a86fc0d75ffca5da6334066d211d
+EBUILD ldapsdk-4.1.8.ebuild 1292 RMD160 d3675beb5d84fa1e95fdf357b7a27a4cfc633dcc SHA1 3dc3186d9162f8433d420d810b71c4106d95bc1f SHA256 7c6d6304acb77d99efebb65c4efb2b6c156304434c9ddf9c1fcbaccdb1958c07
 MISC ChangeLog 274 RMD160 ca56feca823660c7f224f94339a6eedd19475a8c SHA1 29bde6028cc28c275dacc56ef30bc0bea66039ca SHA256 70c9253e0e4cc57480a2b9dc72e5fc2a4a8f232df514e7a2ac5d48d6671322d9
 MISC metadata.xml 247 RMD160 539d78655598983689c96aac5a17d2fb28ea4ed5 SHA1 960aba14e2b906886b907615c63aba1d9b7c938e SHA256 f7e7ffca935e5bb3935096103ed8d04e86ca91d81e6e5767cc520b5cd42d199b
