@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +389-idm-console-1.1.3-r1.ebuild:
+  revision bump add eapi 2 support
+
   23 Aug 2009; Mario Fetka <mario.fetka@gmail.com>
   389-idm-console-1.1.3.ebuild:
   add my mirror for the package
